fix(search): Search now visible on all pages

--- a/src/components/capacitor-site-header/capacitor-site-header.scss
+++ b/src/components/capacitor-site-header/capacitor-site-header.scss
@@ -84,7 +84,7 @@ app-menu-toggle {
 
     &.active {
       color: var(--c-cyan-100);
-      font-weight: 500;
+      // font-weight: 500;
     }
 
     &:hover, &:active, &:focus {
