--- a/src/components/docs-menu/docs-menu.scss
+++ b/src/components/docs-menu/docs-menu.scss
@@ -181,28 +181,6 @@ span {
   margin: 16px 0;
 }
 
-.section-list a {
-  font-weight: 500;
-  font-size: 16px;
-
-  letter-spacing: -0.01em;
-
-  color: var(--color-grey-blue);
-
-  border: none;
-
-  cursor: pointer;
-
-  &.active {
-    color: #222d3a;
-    font-weight: 600;
-  }
-
-  &:hover {
-    color: var(--color-woodsmoke);
-  }
-}
-
 .menu-list li,
 .menu-list ul li {
   list-style-type: none;
@@ -250,7 +228,7 @@ span {
     }
 
     &:hover {
-      color: var(--color-grey-blue);
+      // color: var(--color-grey-blue);
     }
   }
 }
@@ -284,6 +262,8 @@ span {
     margin-block-end: 2px;
     margin-right: 8px;
   }
+
+  transition: opacity .2s ease-out;
 }
 
 .menu-list .link-active {
@@ -297,12 +277,12 @@ span {
   align-items: center;
   margin-inline-start: var(--space-3);
   margin-inline-end: var(--space-2);
-  transition: 80ms height;
+  transition: height 8000ms ease-out;
   overflow: hidden;
 }
 
 .menu-list li ul {
-  transition: 80ms height;
+  transition: height 2s;
 }
 
 .menu-list ul li + li{
@@ -324,7 +304,7 @@ span {
 
 .menu-list ul li a:not(.link-active):hover,
 .menu-list ul li a:not(.link-active):focus {
-  color: var(--color-woodsmoke);
+  color: var(--c-carbon-70);
 }
 
 .menu-list ul li a .bump-up{
@@ -337,7 +317,7 @@ span {
   background: var(--c-cyan-0);
 }
 
-.menu-list .collapsed li {
+.menu-list .collapsed ul li {
   height: 0;
 }
 
